# ollamaChat

./: .gitignore  LICENSE.txt  README.md  chat.py  chat_app.py  chat_window.py  dfvf.txt  langs_import.py  main.py  notes_window.py  ocr.py  ocr_output.txt  ocrold.py  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  server.js  tailwind.config.js  terminal.py  terminal_monitor.py  tsconfig.json  words.py
assets/: langs.py  ocr_output.txt
chat_electron/: database.js  package-lock.json  package.json  server.js
chat_electron/dist-electron/: main.js
chat_electron/electron/: main.ts
chat_electron/src/: App.jsx  index.css  main.jsx
chat_electron/src/components/: DropDown.jsx  ParentComponent.jsx  SpeedDialButton.jsx
chat_electron/src/components/ChatWidget/: config.js  styles.js
chat_electron/src/components/ChatWidget/ModalWindow/: index.jsx  prism.css  style.css
chat_electron/src/pages/: Database.jsx  DatabaseInfoDisplay.jsx  GridView.jsx  HomePage.jsx  Settings.jsx
chat_electron/src/pages/styles/: Database.css  Grid.css  HomePage.css
chat_python/: draggable_window.py  icons.txt  main.py  test.py  tokens.py
imgTxt/: snip_latest.txt
src/: App.jsx  index.css
src/chat/: Chat.css  Chat.jsx
src/components/: ParentComponent.jsx  SettingsCard.jsx  SpeedDialButton.jsx
src/components/ChatWidget/: config.js  index.jsx
src/components/ChatWidget/ModalWindow/: index.jsx
src/pages/: Settings.jsx
