[project]
name = "PyChat"
version = "0.1.0"
description = "Ollama chat app"
authors = [{name = "Keaton", email = "keatonhutto8@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"  # Set the minimum Python version

[project.dependencies]

requests = "^2.25.1"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
